diagweave/tests/snapshots/report_snapshots__snap_json_basic.snap
---
source: diagweave/tests/report_snapshots.rs
assertion_line: 100
expression: output
---
{"schema_version":"v0.2.0","error":{"message":"api unauthorized","type":"report_snapshots::report_common::ApiError"},"metadata":{"error_code":"AUTH.INVALID_TOKEN","severity":"error"},"diagnostic_bag":{"origin_source_errors":{"roots":[0],"nodes":[{"message":"auth invalid token","type":"report_snapshots::report_common::AuthError","source_roots":[]}],"truncated":false,"cycle_detected":false}},"trace":{},"context":{"entries":[{"key":"request_id","value":{"kind":"string","value":"tx-json-snap"}}]},"system":{"entries":[]},"attachments":[{"kind":"note","message":"snapshot test note"}]}
