diagweave/tests/snapshots/report_snapshots__snap_json_with_source_errors.snap
---
source: diagweave/tests/report_snapshots.rs
assertion_line: 135
expression: output
---
{"schema_version":"v0.2.0","error":{"message":"api unauthorized","type":"report_snapshots::report_common::ApiError"},"metadata":{},"diagnostic_bag":{"diagnostic_source_errors":{"roots":[0,1],"nodes":[{"message":"auth invalid token","type":"report_snapshots::report_common::AuthError","source_roots":[]},{"message":"network down","type":"std::io::error::Error","source_roots":[]}],"truncated":false,"cycle_detected":false}},"trace":{},"context":{"entries":[]},"system":{"entries":[]},"attachments":[]}
