diagweave/tests/snapshots/report_snapshots__snap_pretty_with_all_sections.snap
---
source: diagweave/tests/report_snapshots.rs
expression: output
---
Error:
  - message: auth invalid token
  - type: report_snapshots::report_common::AuthError
Governance:
  - error_code: AUTH.ERR
  - severity: warn
  - category: security
  - retryable: true
Trace:
  - (none)
Stack Trace:
  - format: Raw
    main
    handler
    process
System:
  - host: prod-01
Context:
  - user_id: u-123
Attachments:
  - note: investigate later
  - payload payload: data
Display Causes:
  1. token expired
Origin Source Errors:
  - (none)
Diagnostic Source Errors:
  - message: conn refused
  - type: std::io::error::Error
